# oshirase-legacy

./: README.md  pyproject.toml
oshirase/: __init__.py  __main__.py  engine.py
